🐛 FIX: content overflow

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,4 +23,5 @@
     margin-left: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    -webkit-overflow-scrolling: touch;
 }
